# mydatastudio

./: .gitignore  .project  .realm_name  ARCHITECTURE.md  AUDIT.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  Makefile  README.md  TODO.md  TODOS.md  todo.md
.agents/: skills.json
.agents/workflows/: git-commit.md
.gemini/: GEMINI.md
.github/workflows/: build_and_release.yml  build_python.yml  commit_actions.yaml
.gstack/qa-reports/: qa-report-widgets-2026-03-27.md
aiserver/: .gitignore  .pdm-python  diag_vision.py  main.spec  pyproject.toml  requirements.txt  utils.py
aiserver/aichat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
aiserver/hooks/: hook-langchain_anthropic.py  hook-langchain_openai.py
aiserver/tests/: test_auth.py  test_fix_nonetype.py  test_model_manager.py  test_path_confinement.py  test_routes.py  test_start_session.py  test_utils.py
client/: README.md  analyzer_output.txt  pubspec.dev.yaml  pubspec.prod.yaml  pubspec.yaml  tmp.dart
client/assets/: Readme.md
client/assets/python/aichat/: diag_vision.py  main.py  main.spec  pyproject.toml  requirements.txt  test_siglip.py  test_siglip_image.py  test_siglip_inputs.py  tmp_test_processor.py
client/assets/python/aichat/src/aichat/: main.py  model_manager.py  models.py  pst_parser.py  routes.py  utils.py
client/assets/python/aichat/src/aichat/tests/: test_pst_parser.py
client/config/: secrets.json.example
client/data/: mydata.db
client/lib/: app_constants.dart  app_logger.dart  app_router.dart  main.dart  (+6 more)
plans/: 00_MASTER_ROADMAP.md  PHASE_01_OUTLOOK_MAIL.md  fix_outlook_scopes.md
(+282 files in other folders)
